# Materials-Discovery-Intelligence-Platform

./: .env.example  .gitignore  .vercelignore  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  manage.py  pyproject.toml  render.yaml  requirements-vercel.txt  requirements.txt  vercel.json
backend/: __init__.py  asgi.py  celery.py  context_processors.py  settings.py  settings_vercel.py  urls.py  wsgi.py
db/: custom.db
docs/: ADVANCED_ML.md  API.md  ARCHITECTURE.md  COMPLETE_API.md  DATASET.md  DEPLOYMENT.md  DOMAIN_GUIDES.md  ML_PIPELINE.md  PROJECT_FLOW.md  VERCEL_DEPLOYMENT.md  VERCEL_FIX.md
download/: DEPLOYMENT_GUIDE.md
mini-services/ml-pipeline/: index.ts  package.json
ml/: __init__.py
ml/data/: battery_materials_sample.csv
ml/datasets/: __init__.py  loaders.py
ml/evaluation/: __init__.py  analyzer.py
ml/features/: __init__.py  featurizers.py
ml/knowledge_graph/: __init__.py
ml/llm/: __init__.py  chat.py  embeddings.py  rag_pipeline.py
ml/models/: __init__.py  explainability.py  train_property_predictor.py  tuning.py  uncertainty.py  universal_trainer.py
ml/nlp/: __init__.py  ner_extractor.py  pdf_parser.py  relation_extractor.py
prisma/: schema.prisma
python-backend/: Dockerfile  README.md  docker-entrypoint.sh  fastapi_app.py  manage.py  ml_models.py  nlp_engine.py  requirements.txt
python-backend/matdiscoverai/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
python-backend/materials/: __init__.py  models.py  serializers.py  urls.py  views.py
python-backend/ml_services/: __init__.py  urls.py  views.py
python-backend/nlp_pipeline/: __init__.py  urls.py  views.py
python-backend/papers/: __init__.py  models.py  serializers.py  urls.py  views.py
scripts/: generate_all_datasets.py  seed.ts  seed_data.py
src/app/: globals.css  layout.tsx  page.tsx
static/css/: app.css
static/js/: app.js
templates/: base.html
templates/analytics/: insights.html  landing.html
templates/chat/: chat.html
templates/dashboard/: home.html  overview.html
templates/datasets/: compare.html  detail.html  landing.html
templates/domains/: compare.html  detail.html  landing.html
templates/experiments/: detail.html  landing.html  leaderboard.html
(+119 files in other folders)
